Fix hardware button high contrast, hide tooltip in mobile (#6370)

--- a/theme/common.less
+++ b/theme/common.less
@@ -1334,6 +1334,11 @@ p.ui.font.small {
     .collapsedEditorTools #mobiletogglesim {
         bottom: 3.4rem;
     }
+
+    #editortools .hw-button:before,
+    #editortools .hw-button:after {
+        display: none
+    }
 }
 
 
